--- a/ArchComponentsAnalyst/app/src/main/AndroidManifest.xml
+++ b/ArchComponentsAnalyst/app/src/main/AndroidManifest.xml
@@ -8,13 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".AACApplicaiton">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".WorkManager.WorkManagerActivity"
+            android:label="@string/activity_label_workmanager">
         </activity>
     </application>
 
